<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="97dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="92dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/DMS.NotoSans.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/QuestionConfirmSchool"
            android:textColor="@color/gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSchoolQuestion"
            style="@style/DMS.NotoSans.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text=""
            android:textColor="@color/gray_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etReply"
            style="@style/DMS.NotoSans.Body1"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_et_background"
            android:hint="@string/Reply"
            android:paddingStart="16dp"
            android:textColor="@color/gray_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSchoolQuestion" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvError"
            style="@style/DMS.NotoSans.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/InconsistentSchoolReply"
            android:textColor="@color/error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/etReply"
            app:layout_constraintTop_toBottomOf="@+id/etReply" />

        <team.aliens.dms_android.customui.RegisterCustomButton
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="60dp"
            app:first_text="@string/Check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlreadyAccount"
            style="@style/DMS.NotoSans.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlreadyAccount"
            android:textColor="@color/gray_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvLogin"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            style="@style/DMS.NotoSans.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/Login"
            android:textColor="@color/gray_600"
            app:layout_constraintBottom_toBottomOf="@+id/tvAlreadyAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAlreadyAccount"
            app:layout_constraintTop_toTopOf="@+id/tvAlreadyAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>