<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="73dp"
            android:src="@drawable/temporarylogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/DMS.NotoSans.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/SchoolVerificationCode"
            android:textColor="@color/gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/etPinEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="46dp"
            android:layout_marginTop="100dp"
            android:cursorVisible="false"
            android:inputType="number"
            android:layoutDirection="ltr"
            android:maxLength="8"
            android:textIsSelectable="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:pinAnimationType="popIn"
            app:pinBackgroundIsSquare="true"
            app:pinCharacterMask="⚫"
            app:pinCharacterSpacing="20dp"
            app:pinLineColors="@color/gray_500" />

        <TextView
            android:id="@+id/tvDetail"
            style="@style/DMS.NotoSans.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/EmailEightCode"
            android:textColor="@color/gray_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPinEntry" />

        <com.example.dms_android.customui.RegisterCustomButton
            android:id="@+id/btnVerificationCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="60dp"
            app:first_text="@string/verification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>