<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="124dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="37dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/DMS.NotoSans.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/ProfileImage"
            android:textColor="@color/gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="240dp"
            android:layout_marginBottom="380dp"
            android:src="@drawable/addimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnAddImage"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:src="@drawable/addplusimage"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfileImage"
            app:layout_constraintEnd_toEndOf="@+id/ivProfileImage" />

        <TextView
            android:id="@+id/tvSetLater"
            style="@style/DMS.NotoSans.Button"
            android:layout_width="98dp"
            android:layout_height="26dp"
            android:layout_marginBottom="30dp"
            android:text="@string/SettingLater"
            android:textColor="@color/gray_600"
            app:layout_constraintBottom_toTopOf="@+id/btnVerificationCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.dms_android.customui.RegisterCustomButton
            android:id="@+id/btnVerificationCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="60dp"
            app:first_text="@string/Next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>